--- a/index.html
+++ b/index.html
@@ -720,7 +720,11 @@
             </a>
           </div>
         </div>
-
+        <h3 class="dept-subtitle">
+          <a href="DSJ_AE_Consumer_Behavior_Analytics_and_Retail_Operations.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
       </p>
     </div>
   </details>
@@ -1335,6 +1339,11 @@
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Platforms_and_Sharing_Economy.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
@@ -1408,6 +1417,12 @@
               </a>
             </div>
           </div>
+
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Pricing_and_Revenue_Management.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
