--- a/DSJ_AE_Product_Service_and_Process_Innovations.html
+++ b/DSJ_AE_Product_Service_and_Process_Innovations.html
@@ -154,20 +154,20 @@
           </li>
         </ul>
         <div class="nav-social">
-          <a href="https://www.linkedin.com/in/decision-sciences-journal-dsj-49b02a393/" 
-            target="_blank" 
+          <a href="https://www.linkedin.com/in/decision-sciences-journal-dsj-49b02a393/"
+            target="_blank"
             aria-label="DSJ LinkedIn">
             <img src="images/linkedin.png" alt="LinkedIn">
           </a>
 
-          <a href="https://x.com/JournalDecSci" 
-            target="_blank" 
+          <a href="https://x.com/JournalDecSci"
+            target="_blank"
             aria-label="DSJ X (Twitter)">
             <img src="images/x.avif" alt="X">
           </a>
 
-          <a href="https://www.facebook.com/decisionsciencesjournal" 
-            target="_blank" 
+          <a href="https://www.facebook.com/decisionsciencesjournal"
+            target="_blank"
             aria-label="DSJ Facebook">
             <img src="images/facebook.png" alt="Facebook">
           </a>
@@ -176,7 +176,7 @@
     </div>
 
     <!-- breadcrumb / road map -->
-<!--    <nav class="breadcrumb"> 
+<!--    <nav class="breadcrumb">
       <div class="breadcrumb-inner">
         <a href="https://onlinelibrary.wiley.com/journal/15405915" target="_blank">Home</a>
         <span class="breadcrumb-sep">›</span>
@@ -199,9 +199,9 @@
   <div class="dept-page-container">
     <div class="dept-page-header-card">
       <a class="dept-backlink" href="https://decisionsciencejournal.github.io/editorial_board/">← Back to Departments</a>
-      <h1 class="dept-page-title">Sustainable Operations and Circular Economy</h1>
+      <h1 class="dept-page-title">Product, Service, and Process Innovations</h1>
       <div class="dept-page-actions">
-        <a class="dept-action-btn" href="attachments/DSJ_AE_Sustainable_Operations_and_Circular_Economy.xlsx" target="_blank" rel="noopener">
+        <a class="dept-action-btn" href="attachments/DSJ_AE_Product_Service_and_Process_Innovations.xlsx" target="_blank" rel="noopener">
           Excel (download)
         </a>
       </div>
@@ -213,8 +213,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Stefan Gold</div>
-            <div class="ae-affil">Technical University of Munich</div>
+            <div class="ae-name">Shantanu Bhattacharya</div>
+            <div class="ae-affil">Singapore Management University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -224,121 +224,7 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Tim Kraft</div>
-            <div class="ae-affil">North Carolina State University</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Paolo Letizia</div>
-            <div class="ae-affil">University of Tennessee</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Selva Nadarajah</div>
-            <div class="ae-affil">University of Illinois at Chicago</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Mark Stevenson</div>
-            <div class="ae-affil">Lancaster University</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Guido Voigt</div>
-            <div class="ae-affil">University of Hamburg</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Reza Zanjirani Farahani</div>
-            <div class="ae-affil">Paris School of Business</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Haritha Saranga</div>
-            <div class="ae-affil">Indian Institute of Management Bangalore</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Guo Li</div>
-            <div class="ae-affil">Beijing Institute of Technology</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Dehai Liu</div>
-            <div class="ae-affil">Dongbei University of Finance and Economics</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Kai Pan</div>
-            <div class="ae-affil">The Hong Kong Polytechnic University</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-    </div>
-
-    <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Board Members</p>
-
-    <div class="ae-grid">
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Ioannis Bellos</div>
+            <div class="ae-name">Cheryl Druehl</div>
             <div class="ae-affil">George Mason University</div>
           </div>
           <div class="ae-caret">▾</div>
@@ -349,8 +235,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Nagihan Comez-Dolgan</div>
-            <div class="ae-affil">Ozyegin University-Turkey</div>
+            <div class="ae-name">Mahesh Joshi</div>
+            <div class="ae-affil">George Mason University/Hood College</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -360,8 +246,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Meltem Denizel</div>
-            <div class="ae-affil">Iowa State University</div>
+            <div class="ae-name">Chris K. Y. Lo</div>
+            <div class="ae-affil">Hong Kong Polytechnic University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -371,8 +257,23 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Di Fan</div>
-            <div class="ae-affil">The Hong Kong Polytechnic University</div>
+            <div class="ae-name">Karthik Ramachandran</div>
+            <div class="ae-affil">Georgia Institute of Technology</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+    </div>
+
+    <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Review Board Members</p>
+
+    <div class="ae-grid">
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Zhijian Cui</div>
+            <div class="ae-affil">University of Science and Technology of China</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -382,8 +283,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Rick Hardcopf</div>
-            <div class="ae-affil">Utah State University</div>
+            <div class="ae-name">S. Sinan Erzurumlu</div>
+            <div class="ae-affil">Babson College</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -393,8 +294,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Seongtae Kim</div>
-            <div class="ae-affil">Aalto University</div>
+            <div class="ae-name">Xiaojin (Jim) Liu</div>
+            <div class="ae-affil">Virginia Commonwealth University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -404,96 +305,52 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Yen-Ting Lin</div>
+            <div class="ae-name">Juan P. Madiedo</div>
+            <div class="ae-affil">Erasmus University Rotterdam</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Hyunwoo Park</div>
+            <div class="ae-affil">Seoul National University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Young Ro</div>
+            <div class="ae-affil">University of Michigan, Dearborn</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Konstantinos Stouras</div>
+            <div class="ae-affil">University College Dublin, Michael Smurfit Graduate School of Business</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Wenli Xiao</div>
             <div class="ae-affil">University of San Diego</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Akshay Mutha</div>
-            <div class="ae-affil">University of Vermont</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Adem Orsdemir</div>
-            <div class="ae-affil">University of California Riverside</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Bin Shen</div>
-            <div class="ae-affil">Donghua University</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Dayna Simpson</div>
-            <div class="ae-affil">Monash University</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Sining Song</div>
-            <div class="ae-affil">University of Maryland</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Aditya Vedantam</div>
-            <div class="ae-affil">University at Buffalo</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Eda Kemahlioglu Ziya</div>
-            <div class="ae-affil">NC State University</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Qinghua Zhu</div>
-            <div class="ae-affil">Shanghai Jiao Tong University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -516,21 +373,21 @@
       <h3 class="dsj-footer-title">News &amp; Updates</h3>
       <ul class="dsj-footer-news">
         <li>
-          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/DSJ%20Call%20for%20Papers%20-%20AI-Driven%20Decision%20Sciences-1654546841527.pdf" 
+          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/DSJ%20Call%20for%20Papers%20-%20AI-Driven%20Decision%20Sciences-1654546841527.pdf"
             class="news-text" target="_blank">
             Call for Papers: AI-Driven Decision Sciences
           </a>
         </li>
 
         <li>
-          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/Editorial_philosophy_for_DSJ_with_bios_v3-1516289635107.pdf" 
+          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/Editorial_philosophy_for_DSJ_with_bios_v3-1516289635107.pdf"
             class="news-text" target="_blank">
             Changes in the Editorial Structure at the Decision Sciences Journal
           </a>
         </li>
 
         <li>
-          <a href="https://docs.google.com/spreadsheets/d/1T4Asu029ai_pobMlN0KFd0MLGOLYAH840RuiKayUyRs/edit?gid=0#gid=0" 
+          <a href="https://docs.google.com/spreadsheets/d/1T4Asu029ai_pobMlN0KFd0MLGOLYAH840RuiKayUyRs/edit?gid=0#gid=0"
             class="news-text" target="_blank">
             DSJ Most Cited Articles
           </a>
@@ -542,3 +399,4 @@
 
 </body>
 </html>
+
