--- a/DSJ_AE_Service_Operations.html
+++ b/DSJ_AE_Service_Operations.html
@@ -154,20 +154,20 @@
           </li>
         </ul>
         <div class="nav-social">
-          <a href="https://www.linkedin.com/in/decision-sciences-journal-dsj-49b02a393/" 
-            target="_blank" 
+          <a href="https://www.linkedin.com/in/decision-sciences-journal-dsj-49b02a393/"
+            target="_blank"
             aria-label="DSJ LinkedIn">
             <img src="images/linkedin.png" alt="LinkedIn">
           </a>
 
-          <a href="https://x.com/JournalDecSci" 
-            target="_blank" 
+          <a href="https://x.com/JournalDecSci"
+            target="_blank"
             aria-label="DSJ X (Twitter)">
             <img src="images/x.avif" alt="X">
           </a>
 
-          <a href="https://www.facebook.com/decisionsciencesjournal" 
-            target="_blank" 
+          <a href="https://www.facebook.com/decisionsciencesjournal"
+            target="_blank"
             aria-label="DSJ Facebook">
             <img src="images/facebook.png" alt="Facebook">
           </a>
@@ -176,7 +176,7 @@
     </div>
 
     <!-- breadcrumb / road map -->
-<!--    <nav class="breadcrumb"> 
+<!--    <nav class="breadcrumb">
       <div class="breadcrumb-inner">
         <a href="https://onlinelibrary.wiley.com/journal/15405915" target="_blank">Home</a>
         <span class="breadcrumb-sep">›</span>
@@ -199,9 +199,9 @@
   <div class="dept-page-container">
     <div class="dept-page-header-card">
       <a class="dept-backlink" href="https://decisionsciencejournal.github.io/editorial_board/">← Back to Departments</a>
-      <h1 class="dept-page-title">Sustainable Operations and Circular Economy</h1>
+      <h1 class="dept-page-title">Service Operations</h1>
       <div class="dept-page-actions">
-        <a class="dept-action-btn" href="attachments/DSJ_AE_Sustainable_Operations_and_Circular_Economy.xlsx" target="_blank" rel="noopener">
+        <a class="dept-action-btn" href="attachments/DSJ_AE_Service_Operations.xlsx" target="_blank" rel="noopener">
           Excel (download)
         </a>
       </div>
@@ -213,8 +213,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Stefan Gold</div>
-            <div class="ae-affil">Technical University of Munich</div>
+            <div class="ae-name">Chen Jin</div>
+            <div class="ae-affil">National University of Singapore</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -224,8 +224,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Tim Kraft</div>
-            <div class="ae-affil">North Carolina State University</div>
+            <div class="ae-name">Evgeny Kagan</div>
+            <div class="ae-affil">Johns Hopkins University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -235,8 +235,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Paolo Letizia</div>
-            <div class="ae-affil">University of Tennessee</div>
+            <div class="ae-name">Leela Nageswaran</div>
+            <div class="ae-affil">University of Washington</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -246,8 +246,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Selva Nadarajah</div>
-            <div class="ae-affil">University of Illinois at Chicago</div>
+            <div class="ae-name">Zhe Liu</div>
+            <div class="ae-affil">Imperial College London</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -257,8 +257,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Mark Stevenson</div>
-            <div class="ae-affil">Lancaster University</div>
+            <div class="ae-name">Dongyuan Zhan</div>
+            <div class="ae-affil">University of Science and Technology of China</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -268,8 +268,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Guido Voigt</div>
-            <div class="ae-affil">University of Hamburg</div>
+            <div class="ae-name">Pradeep Kumar Pendem</div>
+            <div class="ae-affil">University of Oregon</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -279,8 +279,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Reza Zanjirani Farahani</div>
-            <div class="ae-affil">Paris School of Business</div>
+            <div class="ae-name">Heeseung Andrew Lee</div>
+            <div class="ae-affil">University of Texas at Dallas</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -290,8 +290,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Haritha Saranga</div>
-            <div class="ae-affil">Indian Institute of Management Bangalore</div>
+            <div class="ae-name">Angela Aerry Choi</div>
+            <div class="ae-affil">Korea University Business School</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -301,8 +301,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Guo Li</div>
-            <div class="ae-affil">Beijing Institute of Technology</div>
+            <div class="ae-name">Jin Soo Han</div>
+            <div class="ae-affil">KAIST College of Business</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -312,8 +312,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Dehai Liu</div>
-            <div class="ae-affil">Dongbei University of Finance and Economics</div>
+            <div class="ae-name">Yun Shin Lee</div>
+            <div class="ae-affil">KAIST College of Business</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -323,23 +323,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Kai Pan</div>
-            <div class="ae-affil">The Hong Kong Polytechnic University</div>
-          </div>
-          <div class="ae-caret">▾</div>
-        </summary>
-        <div class="ae-body"></div>
-      </details>
-    </div>
-
-    <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Board Members</p>
-
-    <div class="ae-grid">
-      <details class="ae-card">
-        <summary>
-          <div>
-            <div class="ae-name">Ioannis Bellos</div>
-            <div class="ae-affil">George Mason University</div>
+            <div class="ae-name">Miaozhe Han</div>
+            <div class="ae-affil">Hong Kong University of Science and Technology</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -349,8 +334,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Nagihan Comez-Dolgan</div>
-            <div class="ae-affil">Ozyegin University-Turkey</div>
+            <div class="ae-name">Ke-Wei Huang</div>
+            <div class="ae-affil">National University of Singapore</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -360,8 +345,19 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Meltem Denizel</div>
-            <div class="ae-affil">Iowa State University</div>
+            <div class="ae-name">Vivek Choudhary</div>
+            <div class="ae-affil">Nanyang Technological University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Animesh Animesh</div>
+            <div class="ae-affil">McGill University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -382,8 +378,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Rick Hardcopf</div>
-            <div class="ae-affil">Utah State University</div>
+            <div class="ae-name">Shenyang Jiang</div>
+            <div class="ae-affil">The Hong Kong Polytechnic University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -393,8 +389,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Seongtae Kim</div>
-            <div class="ae-affil">Aalto University</div>
+            <div class="ae-name">Fujun Lai</div>
+            <div class="ae-affil">University of Southern Mississippi</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -404,8 +400,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Yen-Ting Lin</div>
-            <div class="ae-affil">University of San Diego</div>
+            <div class="ae-name">Sandeep Rath</div>
+            <div class="ae-affil">Indian School of Business</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -415,8 +411,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Akshay Mutha</div>
-            <div class="ae-affil">University of Vermont</div>
+            <div class="ae-name">Sentao Miao</div>
+            <div class="ae-affil">University of Colorado Boulder</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -426,8 +422,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Adem Orsdemir</div>
-            <div class="ae-affil">University of California Riverside</div>
+            <div class="ae-name">Youngsoo Kim</div>
+            <div class="ae-affil">Loyola University Chicago</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -437,8 +433,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Bin Shen</div>
-            <div class="ae-affil">Donghua University</div>
+            <div class="ae-name">Dmitry Mitrofanov</div>
+            <div class="ae-affil">Boston College</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -448,8 +444,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Dayna Simpson</div>
-            <div class="ae-affil">Monash University</div>
+            <div class="ae-name">Yonggui Wang</div>
+            <div class="ae-affil">Zhejiang Gongshang University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -459,8 +455,23 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Sining Song</div>
-            <div class="ae-affil">University of Maryland</div>
+            <div class="ae-name">Jennifer Ryan</div>
+            <div class="ae-affil">Lehigh University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+    </div>
+
+    <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Review Board Members</p>
+
+    <div class="ae-grid">
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Simin Li</div>
+            <div class="ae-affil">Tulane University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -470,8 +481,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Aditya Vedantam</div>
-            <div class="ae-affil">University at Buffalo</div>
+            <div class="ae-name">Nil Karacaoglu</div>
+            <div class="ae-affil">Ohio State University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -481,8 +492,8 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Eda Kemahlioglu Ziya</div>
-            <div class="ae-affil">NC State University</div>
+            <div class="ae-name">Setareh Farajollahzadeh</div>
+            <div class="ae-affil">McGill University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -492,8 +503,41 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Qinghua Zhu</div>
-            <div class="ae-affil">Shanghai Jiao Tong University</div>
+            <div class="ae-name">Michelle Kinch</div>
+            <div class="ae-affil">Dartmouth College</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Jeff Shockley</div>
+            <div class="ae-affil">Virginia Commonwealth University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Matthew Walsman</div>
+            <div class="ae-affil">Rutgers University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Ozge Yapar</div>
+            <div class="ae-affil">Indiana University</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
@@ -516,21 +560,21 @@
       <h3 class="dsj-footer-title">News &amp; Updates</h3>
       <ul class="dsj-footer-news">
         <li>
-          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/DSJ%20Call%20for%20Papers%20-%20AI-Driven%20Decision%20Sciences-1654546841527.pdf" 
+          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/DSJ%20Call%20for%20Papers%20-%20AI-Driven%20Decision%20Sciences-1654546841527.pdf"
             class="news-text" target="_blank">
             Call for Papers: AI-Driven Decision Sciences
           </a>
         </li>
 
         <li>
-          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/Editorial_philosophy_for_DSJ_with_bios_v3-1516289635107.pdf" 
+          <a href="https://onlinelibrary.wiley.com/pb-assets/assets/15405915/Editorial_philosophy_for_DSJ_with_bios_v3-1516289635107.pdf"
             class="news-text" target="_blank">
             Changes in the Editorial Structure at the Decision Sciences Journal
           </a>
         </li>
 
         <li>
-          <a href="https://docs.google.com/spreadsheets/d/1T4Asu029ai_pobMlN0KFd0MLGOLYAH840RuiKayUyRs/edit?gid=0#gid=0" 
+          <a href="https://docs.google.com/spreadsheets/d/1T4Asu029ai_pobMlN0KFd0MLGOLYAH840RuiKayUyRs/edit?gid=0#gid=0"
             class="news-text" target="_blank">
             DSJ Most Cited Articles
           </a>
