--- a/index.html
+++ b/index.html
@@ -633,6 +633,11 @@
           </div>
         </div>
 
+        <h3 class="dept-subtitle">
+          <a href="DSJ_AE_Behavioral_Operations.html" class="dept-subtitle-link">
+            Associate Editors and Editorial Review Board Members
+          </a>
+        </h3>
       </p>
     </div>
   </details>
@@ -772,6 +777,11 @@
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Disruptive_Technologies_in_Operations_and_Supply_Chains.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
@@ -843,6 +853,11 @@
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Empirical_Studies_in_SCM.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
@@ -912,6 +927,11 @@
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_FinTech_and_OM_Finance_Interface.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
@@ -1257,6 +1277,15 @@
             </div>
 
             <div class="dept-editor">
+              <a href="https://warrington.ufl.edu/directory/amy-pan/" target="_blank"><span class="prof-name">Amy Pan</span></a> <br>
+              Information Systems and Operations Management <br>
+              <I> University of Florida </I> <br>
+              <a class="email-link" href="mailto: amy.pan@warrington.ufl.edu">
+                amy.pan@warrington.ufl.edu
+              </a>
+            </div>
+
+            <div class="dept-editor">
               <a href="https://iimmumbai.ac.in/about-director" target="_blank"><span class="prof-name">Manoj Tiwari</span></a> <br>
               Operations & Supply Chain Management <br>
               <I> Indian Institute of Management Mumbai </I> <br>
@@ -1485,6 +1514,11 @@
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Product_Service_and_Process_Innovations.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
@@ -1622,6 +1656,11 @@
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Service_Operations.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
@@ -1754,6 +1793,11 @@
               </a>
             </div>
           </div>
+          <h3 class="dept-subtitle">
+            <a href="DSJ_AE_Sourcing_Procurement_Purchasing_and_Logistics.html" class="dept-subtitle-link">
+              Associate Editors and Editorial Review Board Members
+            </a>
+          </h3>
         </p>
       </div>
     </details>
