--- a/DSJ_AE_Healthcare_Operations.html
+++ b/DSJ_AE_Healthcare_Operations.html
@@ -697,6 +697,28 @@
         </summary>
         <div class="ae-body"></div>
       </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Yuting Yuan</div>
+            <div class="ae-affil">Penn State University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Ozge  Yapar</div>
+            <div class="ae-affil">Indiana University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
     </div>
   </div>
 
