--- a/DSJ_AE_Sourcing_Procurement_Purchasing_and_Logistics.html
+++ b/DSJ_AE_Sourcing_Procurement_Purchasing_and_Logistics.html
@@ -293,6 +293,19 @@
       <details class="ae-card">
         <summary>
           <div>
+            <div class="ae-name">Mehdi Farahani</div>
+            <div class="ae-affil">University of Houston</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body">
+          <div style="margin-top:10px;"><strong>Email:</strong> <a href="mailto:mfarahani@uh.edu">mfarahani@uh.edu</a></div>
+        </div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
             <div class="ae-name">Ben Yang</div>
             <div class="ae-affil">University of Oregon</div>
           </div>
@@ -302,7 +315,6 @@
           <div style="margin-top:10px;"><strong>Email:</strong> <a href="mailto:zyang@uoregon.edu">zyang@uoregon.edu</a></div>
         </div>
       </details>
-
     </div>
 
     <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Review Board Members</p>
