--- a/DSJ_AE_Sustainable_Operations_and_Circular_Economy.html
+++ b/DSJ_AE_Sustainable_Operations_and_Circular_Economy.html
@@ -330,6 +330,18 @@
         </summary>
         <div class="ae-body"></div>
       </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Sandun Perera</div>
+            <div class="ae-affil">University of Nevada, Reno</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
     </div>
 
     <p class="dept-page-subtitle" style="margin-top:18px;">Editorial Board Members</p>
