--- a/DSJ_AE_Healthcare_Operations.html
+++ b/DSJ_AE_Healthcare_Operations.html
@@ -712,8 +712,19 @@
       <details class="ae-card">
         <summary>
           <div>
-            <div class="ae-name">Ozge  Yapar</div>
+            <div class="ae-name">Ozge Yapar</div>
             <div class="ae-affil">Indiana University</div>
+          </div>
+          <div class="ae-caret">▾</div>
+        </summary>
+        <div class="ae-body"></div>
+      </details>
+
+      <details class="ae-card">
+        <summary>
+          <div>
+            <div class="ae-name">Wenjuan Fan</div>
+            <div class="ae-affil">Hefei University of Technology</div>
           </div>
           <div class="ae-caret">▾</div>
         </summary>
